--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -24,3 +24,4 @@ $duration: 250ms;
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 $projects-set-gap: 30px;
+$hero-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
