--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -5,16 +5,13 @@
     letter-spacing: 0.06em;
     color: $color-secondary-accent;
 
+    cursor: pointer;
     background-color: $color-accent;
     border: none;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
     transition: background-color $duration $timing-function;
-
-    &:hover {
-        cursor: pointer;
-    }
 
     &:hover,
     &:focus {
@@ -25,17 +22,36 @@
 .hero__button {
     display: block;
     margin: 0 auto;
-    padding: 10px 32px;
+    padding: 10px 24px;
+
+    @media screen and (min-width: $desktop) {
+        padding: 10px 32px;
+    }
 }
 
 .footer-form__btn {
     display: flex;
     align-items: center;
-    padding: 10px 28px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 28px;
+    padding-left: 31px;
+
+    @media screen and (min-width: $desktop) {
+        margin-left: 12px;
+        margin-right: 0;
+        padding-left: 28px;
+    }
 }
 
 .btn__icon {
-    margin-left: 10px;
+    margin-left: 12px;
+
+    @media screen and (min-width: $desktop) {
+        margin-left: 10px;
+    }
 }
 
 .modal-form__btn {
