--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -4,28 +4,53 @@
 
 .page-footer__container {
     display: flex;
+    flex-wrap: wrap;
+  flex-direction: column;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and(min-width: $tablet) {
+    flex-direction: row;
+    justify-content: space-around;
     align-items: baseline;
-    padding-top: 60px;
-    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    justify-content: space-between;
+  }
 }
 
 // address
 .page-footer__address {
-    min-width: 231px;
+    @media screen and (max-width: $max-tablet) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 60px;
+    }
 }
 
 .address-list {
     @extend %list;
+
+    @media screen and (max-width: $max-tablet) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .address-list__item:not(:last-child) {
-    margin-bottom: 9px;
+    margin-bottom: 8px;
+
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 9px;
+    }
 }
 
 .address-list__link,
 .address-list__contact {
     display: inline-block;
-
     font-style: normal;
     text-decoration: none;
 }
@@ -46,7 +71,9 @@
 }
 
 .page-footer__social {
-    margin-left: 70px;
+    @media screen and (max-width: $max-tablet) {
+        margin-bottom: 60px;
+    }
 }
 
 .social__title {
@@ -59,37 +86,23 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: $color-secondary-accent;
-}
 
-// Form footer 
-.page-footer__form-container {
-    margin-left: auto;
-}
-
-.page-footer__call-to-action {
-    margin-top: 0;
-        margin-bottom: 20px;
-    
-        font-weight: 700;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: $color-secondary-accent;
+    @media screen and (max-width: $max-tablet) {
+        text-align: center;
+    }
 }
 
 .footer-form {
-    display: flex;
-    align-items: center;
-}
-
-.footer-form__label {
-    margin-right: 12px;
+    @media screen and (min-width: $desktop) {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .footer-form__input {
-    display: block;
+    margin-bottom: 20px;
     padding: 15px 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
 
     font-size: 16px;
@@ -107,5 +120,14 @@
         line-height: 1.25;
         letter-spacing: 0.03em;
         color: $color-adress-contact;
+    }
+
+    @media screen and (min-width: $tablet) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 0;
+        width: 358px;
     }
 }
