--- a/sass/components/page-studio/_modal-window.scss
+++ b/sass/components/page-studio/_modal-window.scss
@@ -8,35 +8,64 @@
     height: 100%;
 
     background-color: rgba(0, 0, 0, 0.2);
-    ;
 
+    visibility: visible;
     opacity: 1;
     transition: opacity $duration $timing-function;
+
+    overflow-y: scroll;
+
+    &--is-hidden {
+        visibility: hidden;
+        opacity: 0;
+        pointer-events: none;
+    }
 }
 
-.backdrop--is-hidden {
-    opacity: 0;
-    pointer-events: none;
-}
+// // Модальне вікно
 
 .modal {
     position: absolute;
-    top: 50%;
+    // top: 50%;
+    top: 93px;
     left: 50%;
 
     padding: 40px;
-    min-width: 528px;
-    min-height: 581px;
+    max-width: 450px;
+    width: 100%;
 
     background-color: $color-primary-bg;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    transform: translate(-50%, -50%) scale(1);
+    transform: translateX(-50%) scale(1);
     transition: transform $duration $timing-function;
 
     .backdrop--is-hidden & {
-        transform: translate(-50%, -50%) scale(0.9);
+        transform: translateX(-50%) scale(0.9);
+
+        @media screen and (min-width: $tablet) and (min-height: $height-tablet) {
+            transform: translate(-50%, -50%) scale(0.9);
+        }
+
+        @media screen and (min-width: $desktop) {
+            transform: translate(-50%, -50%) scale(0.9);
+        }
+    }
+
+    @media screen and (min-width: $tablet) and (min-height: $height-tablet) {
+        top: 50%;
+
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    @media screen and (min-width: $desktop) {
+        top: 50%;
+
+        max-width: 528px;
+
+        transform: translate(-50%, -50%) scale(1);
     }
 }
 
@@ -45,22 +74,21 @@
     top: 8px;
     right: 8px;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 6px;
     width: 30px;
     height: 30px;
 
-    text-align: center;
     color: $color-icon;
 
+    cursor: pointer;
     background-color: $color-primary-bg;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
 
     transition: color $duration $timing-function;
-
-    &:hover {
-        cursor: pointer;
-    }
 
     &:hover,
     &:focus {
@@ -68,8 +96,18 @@
     }
 }
 
+.close-btn__icon {
+    fill: currentColor;
+}
+
 .modal-form {
-    width: 448px;
+    @media screen and (min-width: $tablet) {
+        width: 370px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        width: 448px;
+    }
 }
 
 .modal-form__title {
@@ -78,11 +116,18 @@
     margin-bottom: 12px;
 
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
-    color: $color-primary;
+
+    @media screen and (min-width: $desktop) {
+        font-size: 20px;
+        line-height: 1.15;
+        letter-spacing: 0.03em;
+    }
 }
+
+// // Ім'я, телефон, пошта, коментар
 
 .modal-form__field {
     position: relative;
@@ -94,36 +139,43 @@
     display: block;
     margin-bottom: 4px;
 
-    color: $color-secondary;
-}
-
-.modal-form__label,
-.modal-form__input,
-.modal-form__comment,
-.modal-form__comment::placeholder {
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
+    color: $color-secondary;
 }
 
 .modal-form__input {
-    display: block;
     padding: 11px 12px 11px 42px;
     height: 40px;
 }
 
 .modal-form__input,
+.modal-form__comment,
+.modal-form__comment::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+
+    @media screen and (min-width: $desktop) {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.01em;
+    }
+}
+
+.modal-form__input,
 .modal-form__comment {
     width: 100%;
-
     color: $color-text-form;
 
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    transition: outline $duration $timing-function;
+    transition: border-color $duration $timing-function;
+    outline: none;
 
     &:focus {
-        outline: 1px solid $color-accent;
+        border-color: $color-accent;
     }
 }
 
@@ -144,7 +196,6 @@
 }
 
 .modal-form__comment {
-    display: block;
     padding: 12px 16px;
     height: 120px;
     margin-bottom: 20px;
@@ -156,6 +207,7 @@
     }
 }
 
+// Чекбокс
 
 .modal-form__label-policy {
     display: flex;
@@ -170,16 +222,13 @@
 }
 
 .modal-form__icon-check {
-    margin-right: 7px;
+    margin-right: 8px;
 
-    border: 1.75px solid $color-primary;
-    border-radius: 2px;
+    cursor: pointer;
+    border: 2px solid $color-primary;
+    border-radius: 3px;
 
-    transition: background-color $duration $timing-function;
-
-    &:hover {
-        cursor: pointer;
-    }
+    transition: background-color $duration $timing-function, border-color $duration $timing-function;
 
     .modal-form__checkbox:checked+&,
     .modal-form__checkbox:checked:focus+& {
@@ -188,12 +237,22 @@
     }
 
     .modal-form__checkbox:focus+& {
-        outline: 2px solid $color-accent;
+        border-color: $color-accent;
     }
 }
 
 .modal-form__policy {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
     color: $color-secondary;
+    user-select: none;
+
+    @media screen and (min-width: $desktop) {
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+    }
 }
 
 .modal-form__policy-link {
