--- a/sass/components/page-studio/_section-clients.scss
+++ b/sass/components/page-studio/_section-clients.scss
@@ -1,14 +1,23 @@
 .clients-list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: calc(15px * -1);
+
     @extend %list;
+}
+
+.clients-list__item {
+    margin: 15px;
+
+    @media screen and (max-width: $max-mobile) {
+        width: calc((100% - 60px) / 2);
+    }
 }
 
 .clients-list__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
     height: 92px;
 
     color: $color-client-icon;
@@ -24,6 +33,14 @@
         color: $color-accent;
 
         border-color: $color-accent;
+    }
+
+    @media screen and (min-width: $tablet) {
+        width: 226px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        width: 170px;
     }
 }
 
