--- a/sass/components/page-portfolio/_projects-list.scss
+++ b/sass/components/page-portfolio/_projects-list.scss
@@ -1,18 +1,26 @@
 .projects-list {
     display: flex;
     flex-wrap: wrap;
-    margin-top: calc(-1 * $projects-set-gap);
-    margin-left: calc(-1 * $projects-set-gap);
+    margin: calc(15px * -1);
     @extend %list;
 }
 
 .projects-list__item {
-    margin-top: $projects-set-gap;
-    margin-left: $projects-set-gap;
+    margin: 15px;
+
+    @media screen and (min-width: $tablet) {
+        width: 354px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        width: 370px;
+    }
 }
 
 .projects-list__link {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     text-decoration: none;
 
@@ -24,6 +32,8 @@
     }
 }
 
+// Тумба 
+
 .project-thumb {
     position: relative;
 
@@ -32,6 +42,8 @@
 
 .project-thumb__icon {
     display: block;
+    width: 100%;
+    height: auto;
 }
 
 .project-overlay {
@@ -40,8 +52,9 @@
     left: 0;
 
     display: flex;
-    justify-content: center;
     align-items: center;
+    padding-left: 24px;
+    padding-right: 24px;
     height: 100%;
     width: 100%;
 
@@ -57,15 +70,23 @@
 }
 
 .project-overlay__descr {
-    width: 322px;
-
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
     color: $color-secondary-accent;
+
+    @media screen and (max-width: $min-mobile) {
+        font-size: 16px;
+        letter-spacing: 0.03em;
+    }
+
+    @media screen and (min-width: $tablet) {
+        width: 354px;
+    }
 }
 
 .projects-list__box {
+    flex-grow: 1;
     padding: 20px 24px;
 
     border-right: 1px solid #eeeeee;
