--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import './base/global-styles';
 @import './layout/visually-hidden';
 @import './components/logo';
+@import './components/page-header/index-page-header.scss';
 @import './components/page-studio/index-page-studio';
 @import './components/btn';
 @import './components/social-network-icons';
