--- a/sass/components/page-portfolio/_filter-btn.scss
+++ b/sass/components/page-portfolio/_filter-btn.scss
@@ -1,8 +1,25 @@
 .filter-list {
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    margin-bottom: calc(15px * -1 + 40px);
     @extend %list;
+
+    @media screen and (max-width: $max-mobile) {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    @media screen and (min-width: $tablet) {
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 50px;
+    }
+}
+
+.filter-list__item:not(:last-child) {
+    margin-right: 8px;
 }
 
 .filter-list__item:not(:last-child) {
@@ -18,6 +35,7 @@
     letter-spacing: 0.03em;
     color: $color-primary;
 
+    cursor: pointer;
     background-color: $color-primary-btn;
     border: none;
     border-radius: 4px;
@@ -26,15 +44,15 @@
         background-color $duration $timing-function,
         box-shadow $duration $timing-function;
 
-    &:hover {
-        cursor: pointer;
-    }
-
     &:hover,
     &:focus {
         color: $color-secondary-accent;
 
         background-color: $color-accent;
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
+
+    @media screen and (max-width: $max-mobile) {
+        margin-bottom: 15px;
     }
 }
