--- a/sass/components/page-studio/_hero.scss
+++ b/sass/components/page-studio/_hero.scss
@@ -7,7 +7,7 @@
     background-color: $color-hero-bg;
     background-image:
         $hero-gradient,
-        url("/images/mobile-image/mobile-hero.jpg");
+        url("./images/mobile-image/mobile-hero.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -15,7 +15,7 @@
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-        background-image: $hero-gradient, url("/images/mobile-image/mobile-hero@2x.jpg");
+        background-image: $hero-gradient, url("./images/mobile-image/mobile-hero@2x.jpg");
     }
 
     @media screen and (min-width: $tablet-hero) {
@@ -23,24 +23,24 @@
 
         background-image:
             $hero-gradient,
-            url("/images/tablet-image/tablet-hero.jpg");
+            url("./images/tablet-image/tablet-hero.jpg");
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: $hero-gradient, url("/images/tablet-image/tablet-hero@2x.jpg");
+            background-image: $hero-gradient, url("./images/tablet-image/tablet-hero@2x.jpg");
         }
     }
 
     @media screen and (min-width: $desktop-hero) {
         max-width: 1600px;
 
-        background-image: $hero-gradient, url("/images/desktop-image/desktop-hero.jpg");
+        background-image: $hero-gradient, url("./images/desktop-image/desktop-hero.jpg");
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: $hero-gradient, url("/images/desktop-image/box-1@2x.jpg");
+            background-image: $hero-gradient, url("./images/desktop-image/box-1@2x.jpg");
         }
     }
 
