--- a/sass/components/page-studio/_hero.scss
+++ b/sass/components/page-studio/_hero.scss
@@ -23,24 +23,24 @@
 
         background-image:
             $hero-gradient,
-            url("./images/tablet-image/tablet-hero.jpg");
+            url("../images/tablet-image/tablet-hero.jpg");
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: $hero-gradient, url("./images/tablet-image/tablet-hero@2x.jpg");
+            background-image: $hero-gradient, url("../images/tablet-image/tablet-hero@2x.jpg");
         }
     }
 
     @media screen and (min-width: $desktop-hero) {
         max-width: 1600px;
 
-        background-image: $hero-gradient, url("./images/desktop-image/desktop-hero.jpg");
+        background-image: $hero-gradient, url("../images/desktop-image/desktop-hero.jpg");
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: $hero-gradient, url("./images/desktop-image/box-1@2x.jpg");
+            background-image: $hero-gradient, url("../images/desktop-image/box-1@2x.jpg");
         }
     }
 
